FEATURE-001 공통 Alert 처리, 다국어 처리